--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="./src/assets/img/static/comp.svg" href="./src/assets/login/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-    <title>SNT - Star New Tech</title>
+    <title>Starnewtech - Гарантия и качество оригинальный детали</title>
   </head>
 
   <body>
