--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="./src/assets/img/static/comp.svg" href="./src/assets/login/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Полный комплекс сервисного обслуживания компьютерного оборудования | Starnewtech" />
+    <meta property="og:site_name" content="starnewtech" />
+    <meta property="og:url" content="http://starnewtech.uz/" />
+    <meta property="og:description"
+          content="Полный комплекс сервисного обслуживания компьютерного оборудования." />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <title>Starnewtech - Гарантия и качество оригинальный детали</title>
   </head>
